--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
-  "name": "node-starter",
-  "version": "0.0.0",
+  "name": "hyperid_test",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "webpack serve"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "hyperid": "^3.0.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^4.11.1"
   }
 }
